--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Love in Action</h1>
         <h2>Nurturing our Children</h2>
         <nav>
-            <ul>
+            <ul class="nav">
                 <li>Contact Us</li>
                 <li>Mission Statement</li>
                 <li>About Us</li>
