Fix spelling of research

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="row">
                 <h2>Links</h2>
                 <ul>
-                    <li>Reaserch link one</li>
+                    <li>Research link one</li>
                     <li>Research link two</li>
                     <li>Research link three</li>
                 </ul>
