Add logo image Create basic page Contact email Donate button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="main.css">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Love In Action</title>
 </head>
 
 <body>
@@ -24,19 +25,36 @@
     <header>
         <h1>Love in Action</h1>
         <h2>Nurturing our Children</h2>
-        <nav>
+        <!-- <nav>
             <ul class="nav">
                 <li>Contact Us</li>
                 <li>Mission Statement</li>
                 <li>About Us</li>
             </ul>
-        </nav>
+        </nav> -->
     </header>
 
-    <section id=content>
+
+    <section id="basic">
+        <p><a href="mailto:info@loveinaction.io">Contact Us</a></p>
+        <!-- Paypal Button -->
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="Z84JHLFBBRPA4">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+        </form>
+    </section>
+    <!--End Paypal Button-->
+    <img src="img/loveinaction.jpg" id="logo">
+
+
+
+
+    <!-- <section id=content>
         <div class="container">
-            <div class="half-width">
-                <div class="row">
+            <div class="row">
+                <div class="half-width">
                     <h2>Current Projects</h2>
                     <ul>
                         <li>School Breakfast and Lunch Program</li>
@@ -47,7 +65,7 @@
                         <li>Link to Merch</li>
                         <li>Donate Button (paypal? square? stripe?)</li>
                     </ul>
-                    <div>Carousel</div>
+                    <div>Carousel</div> 
                 </div>
                 <div class="half-width">
                     <h2>Future Projects</h2>
@@ -71,7 +89,7 @@
             <div class="half-width">Financials</div>
         </div>
 
-    </section>
+    </section> -->
 
 
 </body>
