--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
     <header>
         <h1>Love in Action</h1>
         <h2>Nurturing our Children</h2>
-        <!-- <nav>
+        <nav>
             <ul class="nav">
-                <li>Contact Us</li>
+                <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
                 <li>Mission Statement</li>
                 <li>About Us</li>
             </ul>
-        </nav> -->
+        </nav>
     </header>
 
 
     <section id="basic">
-        <p><a href="mailto:info@loveinaction.io">Contact Us</a></p>
+        <p></p>
         <!-- Paypal Button -->
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
