Style missionstatement.html

--- a/missionstatement.html
+++ b/missionstatement.html
@@ -34,6 +34,7 @@
         </nav>
     </header>
     <section id="missionstatement">
+        <h4>Mission Statement</h4>
         <p>Love in Action was founded with the goal of enriching the lives of people in our local community. We believe that by helping those around us we can help pur local communities become places where all people can thrive and live up to their potential.
         </p>
     </section>
