--- a/missionstatement.html
+++ b/missionstatement.html
@@ -28,7 +28,7 @@
         <nav>
             <ul class="nav">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
-                <li>Mission Statement</li>
+                <li><a href="/missionstatement.html">Mission Statement</a></li>
                 <li>About Us</li>
             </ul>
         </nav>
