--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <![endif]-->
 
     <header>
-        <h1>Love in Action</h1>
+        <h1><a href="/index.html">Love in Action</a></h1>
         <h2>Nurturing our Children</h2>
         <nav>
             <ul class="nav">
