Create about page Add about link to nav bar

--- a/about.html
+++ b/about.html
@@ -9,12 +9,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Love in Action</title>
+    <!-- <title>Love in Action</title> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Love In Action</title>
+    <title>Love In Action About Us</title>
 </head>
 
 <body>
@@ -33,7 +33,11 @@
             </ul>
         </nav>
     </header>
-
+    <section id="missionstatement">
+        <h4>About Us</h4>
+        <p>Bios coming soon.
+        </p>
+    </section>
 
     <section id="basic">
         <p></p>
@@ -48,48 +52,6 @@
     <!--End Paypal Button-->
     <img src="img/loveinaction.jpg" id="logo">
 
-
-
-
-    <!-- <section id=content>
-        <div class="container">
-            <div class="row">
-                <div class="half-width">
-                    <h2>Current Projects</h2>
-                    <ul>
-                        <li>School Breakfast and Lunch Program</li>
-                        <li>Aiding Migrant Children</li>
-                    </ul>
-                    <h3>Interested in Helping?</h3>
-                    <ul>
-                        <li>Link to Merch</li>
-                        <li>Donate Button (paypal? square? stripe?)</li>
-                    </ul>
-                    <div>Carousel</div> 
-                </div>
-                <div class="half-width">
-                    <h2>Future Projects</h2>
-                    <ul>
-                        <li>Teddy Bear Project</li>
-                        <li>Snacks for Every Classroom</li>
-                        <li>Suggestions</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="half-width">
-            <div class="row">
-                <h2>Links</h2>
-                <ul>
-                    <li>Research link one</li>
-                    <li>Research link two</li>
-                    <li>Research link three</li>
-                </ul>
-            </div>
-            <div class="half-width">Financials</div>
-        </div>
-
-    </section> -->
 
 
 </body>
