--- a/missionstatement.html
+++ b/missionstatement.html
@@ -29,7 +29,7 @@
             <ul class="nav">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
                 <li><a href="/missionstatement.html">Mission Statement</a></li>
-                <li>About Us</li>
+                <li><a href="/about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
