--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
         <![endif]-->
 
     <header>
-        <h1><a href="/index.html">Love in Action</a></h1>
+        <h1><a href="index.html">Love in Action</a></h1>
         <h2>Nurturing our Children</h2>
         <nav>
             <ul class="nav">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
-                <li><a href="/missionstatement.html">Mission Statement</a></li>
-                <li><a href="/about.html">About Us</a></li>
+                <li><a href="missionstatement.html">Mission Statement</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
     </header>
