Set todo for centering text

--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@
             </ul>
         </nav>
     </header>
-    <section id="missionstatement">
+    <section id="about">
         <h4>About Us</h4>
-        <p>Bios coming soon.
-        </p>
+        <!--TODO: center text-->
+        <p>Bios coming soon.</p>
     </section>
 
     <section id="basic">
