Add todo for mobile nav

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <header>
         <h1><a href="index.html">Love in Action</a></h1>
         <h2>Nurturing our Children</h2>
+        <!--TODO:fix nav for mobile-->
         <nav>
             <ul class="nav">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
