--- a/index.html
+++ b/index.html
@@ -36,61 +36,61 @@
     </header>
 
 
-    <section id="basic">
-        <p></p>
-        <!-- Paypal Button -->
-        <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-            <input type="hidden" name="cmd" value="_s-xclick">
-            <input type="hidden" name="hosted_button_id" value="Z84JHLFBBRPA4">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-        </form>
-    </section>
-    <!--End Paypal Button-->
+    <!--TODO:make gofundme link and make it the main link, move pp link to less prominent spot-->
+
     <img src="img/loveinaction.jpg" id="logo">
 
 
 
 
-    <!-- <section id=content>
+    <section id=content>
         <div class="container">
             <div class="row">
                 <div class="half-width">
                     <h2>Current Projects</h2>
                     <ul>
-                        <li>School Breakfast and Lunch Program</li>
-                        <li>Aiding Migrant Children</li>
+                        <li><a href="currentprojects.html#lunch">School Lunch Program</a></li>
                     </ul>
                     <h3>Interested in Helping?</h3>
                     <ul>
-                        <li>Link to Merch</li>
-                        <li>Donate Button (paypal? square? stripe?)</li>
+                        <!-- <li>Link to Merch</li> -->
+                        <!--TODO: add gofundme link <li>Donate Button (paypal? square? stripe?)</li>-->
+                        <section id="basic">
+                            <p></p>
+                            <!-- Paypal Button -->
+                            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                <input type="hidden" name="cmd" value="_s-xclick">
+                                <input type="hidden" name="hosted_button_id" value="Z84JHLFBBRPA4">
+                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                            </form>
+                        </section>
+                        <!--End Paypal Button-->
                     </ul>
-                    <div>Carousel</div> 
+                    <!-- <div>Carousel</div> -->
                 </div>
                 <div class="half-width">
                     <h2>Future Projects</h2>
                     <ul>
-                        <li>Teddy Bear Project</li>
                         <li>Snacks for Every Classroom</li>
-                        <li>Suggestions</li>
+                        <!--TODO: create suggestion form with treasure box image<li>Suggestions</li>-->
                     </ul>
                 </div>
             </div>
         </div>
         <div class="half-width">
-            <div class="row">
-                <h2>Links</h2>
-                <ul>
-                    <li>Research link one</li>
-                    <li>Research link two</li>
-                    <li>Research link three</li>
-                </ul>
-            </div>
+            <!-- <div class="row"> -->
+            <h2>Links</h2>
+            <ul>
+                <li>Research link one</li>
+                <li>Research link two</li>
+                <li>Research link three</li>
+            </ul>
+            <!-- </div> -->
             <div class="half-width">Financials</div>
         </div>
 
-    </section> -->
+    </section>
 
 
 </body>
