Add pdf text to lunch policy link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-sm">
                     <h2>Resources</h2>
-                    <p><a href="https://www.wrps.org/foodservice/Frequently%20Asked%20Questions%20about%20WRPS%20Student%20Meal%20Accounts%2018%2019.pdf">School Lunch Policy</a></p>
+                    <p><a href="https://www.wrps.org/foodservice/Frequently%20Asked%20Questions%20about%20WRPS%20Student%20Meal%20Accounts%2018%2019.pdf">School Lunch Policy (pdf)</a></p>
 
                 </div>
                 <div class="col-sm">
