Make logo link to homepage

--- a/index.html
+++ b/index.html
@@ -34,14 +34,15 @@
         <!-- <h2>Nurturing our Children</h2> -->
         <!--TODO:fix nav for mobile-->
 
-        <img src="img/loveinaction.jpg" id="logo">
+        <a href="index.html"><img src="img/loveinaction.jpg" id="logo"></a>
         <h2>Nurturing our Children</h2>
 
     </header>
 
     <!--TODO:make gofundme link and make it the main link, move pp link to less prominent spot-->
 
-
+    <!--TODO: remove tagline from subpages -->
+    <!--TODO: all logo images are links to homepage-->
 
     <section id=content>
         <div class="container">
