Add donor page update li for menu to be horizontal while other li vertical

--- a/currentprojects.html
+++ b/currentprojects.html
@@ -26,7 +26,7 @@
         <h1><a href="index.html">Love in Action</a></h1>
         <h2>Nurturing our Children</h2>
         <nav>
-            <ul class="nav">
+            <ul class="nav" id="menu">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
                 <li><a href="missionstatement.html">Mission Statement</a></li>
                 <li><a href="about.html">About Us</a></li>
