--- a/donors.html
+++ b/donors.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="main.css">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Love In Action About Us</title>
+    <title>Love In Action Donors</title>
 </head>
 
 <body>
@@ -33,10 +33,13 @@
             </ul>
         </nav>
     </header>
-    <section id="about">
-        <h4>About Us</h4>
-        <!--TODO: center text-->
-        <p>Bios coming soon.</p>
+    <section id="donors">
+        <h4>Donors</h4>
+        <p>Love in Action is grateful for our generous contributors.</p>
+        <ul>
+            <li id="donorlist">First English Lutheran Church, Wisconsin Rapids</li>
+            <li id="donorlist">Knight Barry Title Services</li>
+        </ul>
     </section>
 
     <section id="basic">
