--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
         <nav>
-            <ul class="nav">
+            <ul class="nav" id="menu">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
                 <li><a href="missionstatement.html">Mission Statement</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -83,7 +83,8 @@
                 </div>
                 <div class="col-sm">
                     <h2>Financials</h2>
-                    <p>Coming Soon</p>
+                    <p><a href="donors.html">Donors</a></p>
+                    <p>More Coming Soon</p>
                 </div>
             </div>
         </div>
