--- a/missionstatement.html
+++ b/missionstatement.html
@@ -26,7 +26,7 @@
         <h1><a href="index.html">Love in Action</a></h1>
         <h2>Nurturing our Children</h2>
         <nav>
-            <ul class="nav">
+            <ul class="nav" id="menu">
                 <li><a href="mailto:info@loveinaction.io">Contact Us</a></li>
                 <li><a href="missionstatement.html">Mission Statement</a></li>
                 <li><a href="about.html">About Us</a></li>
@@ -35,7 +35,7 @@
     </header>
     <section id="missionstatement">
         <h4>Mission Statement</h4>
-        <p>Love in Action was founded with the goal of enriching the lives of people in our local community. We believe that by helping those around us we can help pur local communities become places where all people can thrive and live up to their potential.
+        <p>Love in Action was founded with the goal of enriching the lives of people in our local community. We believe that by helping those around us we can help our local communities become places where all people can thrive and live up to their potential.
         </p>
     </section>
 
