Format donor page

--- a/donors.html
+++ b/donors.html
@@ -35,15 +35,21 @@
     </header>
     <section id="donors">
         <h4>Donors</h4>
-        <p>Love in Action is grateful for our generous contributors.</p>
-        <ul>
-            <li id="donorlist">First English Lutheran Church, Wisconsin Rapids</li>
-            <li id="donorlist">Knight Barry Title Services</li>
+        <p id="donors">Love in Action is grateful for our generous contributors.</p>
+        <ul id="donorlist">
+            <li>
+                <!--href="http://www.felwr.org/">First English Lutheran Church, Wisconsin Rapids</href-->
+                First English Lutheran Church, Wisconsin Rapids
+            </li>
+            <li>
+                <!--href="https://www.knightbarry.com">Knight Barry Title Services</href-->
+                Knight Barry Title Services
+            </li>
         </ul>
     </section>
 
     <section id="basic">
-        <p></p>
+        <!-- <p></p> -->
         <!-- Paypal Button -->
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
